--- a/.github/workflows/deploy-cache.yml
+++ b/.github/workflows/deploy-cache.yml
@@ -1,177 +1,50 @@
-# File: .github/workflows/deploy-cache.yml
-name: Deploy Cache Service
+# File: .github/workflows/docker-build.yml
+name: Build and Push Cache Service
 
 on:
   push: 
-    branches: 
-      - main
-    paths:
-      - 'services/cache_service/**'
-      - '. github/workflows/deploy-cache. yml'
-  workflow_dispatch: 
-
-env:
-  REGISTRY:  ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/pomai-cache
+    branches: [ "main", "master" ]
+  workflow_dispatch:
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-      - name: Checkout code
-        uses:  actions/checkout@v4
+      - name:  Checkout code
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v3
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets. GITHUB_TOKEN }}
-
-      - name:  Extract metadata
-        id: meta
-        uses: docker/metadata-action@v5
         with: 
-          images: ${{ env. REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=sha,prefix={{branch}}-
-            type=raw,value=latest,enable={{is_default_branch}}
+          username: ${{ secrets. DOCKERHUB_USERNAME }}
+          password: ${{ secrets. DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Build and push cache-service
         uses: docker/build-push-action@v5
         with:
-          context: ./services/cache_service
-          file: ./services/cache_service/Dockerfile
+          context: . 
+          file: ./Dockerfile
           push: true
-          tags:  ${{ steps.meta.outputs. tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags:  autocookies/pomai_server:cache-service
           cache-from: type=gha
-          cache-to:  type=gha,mode=max
+          cache-to: type=gha,mode=max
           platforms: linux/amd64
 
-      - name: Deploy to VPS (Password Auth)
-        uses: appleboy/ssh-action@v1.0.0
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username:  ${{ secrets.VPS_USERNAME }}
-          password: ${{ secrets.VPS_PASSWORD }}
-          port: ${{ secrets.VPS_PORT || 22 }}
-          script: |
-            # Navigate to deployment directory
-            cd /opt/pomai-cache || mkdir -p /opt/pomai-cache && cd /opt/pomai-cache
-            
-            # Create docker-compose.yml
-            cat > docker-compose.yml <<'EOF'
-            version:  '3.8'
-            
-            services:
-              cache: 
-                image: ${{ env. REGISTRY }}/${{ env.IMAGE_NAME }}:latest
-                container_name: pomai-cache
-                restart: unless-stopped
-                ports:
-                  - "8080:8080"
-                environment: 
-                  - PORT=8080
-                  - CACHE_SHARDS=32
-                  - PER_TENANT_CAPACITY_BYTES=104857600
-                  - GRACEFUL_SHUTDOWN_SEC=10
-                  - CLEANUP_INTERVAL_SEC=60
-                  - TZ=Asia/Ho_Chi_Minh
-                volumes:
-                  - cache-data:/data
-                networks:
-                  - cache-network
-                healthcheck: 
-                  test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:8080/health"]
-                  interval: 30s
-                  timeout: 10s
-                  retries:  3
-                  start_period:  40s
-                logging: 
-                  driver: "json-file"
-                  options: 
-                    max-size: "10m"
-                    max-file: "3"
-            
-            volumes:
-              cache-data: 
-                driver: local
-            
-            networks:
-              cache-network:
-                driver: bridge
-            EOF
-            
-            # Login to GitHub Container Registry
-            echo "${{ secrets.GITHUB_TOKEN }}" | docker login ${{ env. REGISTRY }} -u ${{ github. actor }} --password-stdin
-            
-            # Pull latest image
-            docker compose pull
-            
-            # Stop and remove old container
-            docker compose down
-            
-            # Start new container
-            docker compose up -d
-            
-            # Clean up old images
-            docker image prune -af
-            
-            # Wait a bit
-            sleep 5
-            
-            # Show status
-            echo "=== Container Status ==="
-            docker compose ps
-            echo ""
-            echo "=== Recent Logs ==="
-            docker compose logs --tail=30
-
-      - name: Health Check
-        run: |
-          echo "Waiting for service to start..."
-          sleep 15
-          
-          MAX_RETRIES=5
-          RETRY_COUNT=0
-          
-          while [ $RETRY_COUNT -lt $MAX_RETRIES ]; do
-            if curl -f http://${{ secrets.VPS_HOST }}:8080/health; then
-              echo "✅ Health check passed!"
-              exit 0
-            fi
-            
-            RETRY_COUNT=$((RETRY_COUNT + 1))
-            echo "⏳ Retry $RETRY_COUNT/$MAX_RETRIES..."
-            sleep 10
-          done
-          
-          echo "❌ Health check failed after $MAX_RETRIES attempts"
-          exit 1
-
-      - name:  Notify on success
-        if: success()
+      - name: Build Summary
         run: |
           echo "========================================="
-          echo "✅ Cache service deployed successfully!"
+          echo "✅ Docker image built and pushed!"
           echo "========================================="
-          echo "🔗 Health:  http://${{ secrets.VPS_HOST }}:8080/health"
-          echo "📊 Stats: http://${{ secrets.VPS_HOST }}:8080/v1/stats"
+          echo "📦 Image: autocookies/pomai_server:cache-service"
+          echo "🔗 Docker Hub: https://hub.docker.com/r/autocookies/pomai_server"
           echo "========================================="
-
-      - name: Notify on failure
-        if: failure()
-        run: |
+          echo ""
+          echo "To deploy on VPS:"
+          echo "  cd /opt/pomai"
+          echo "  docker compose pull cache-service"
+          echo "  docker compose up -d cache-service"
           echo "========================================="
-          echo "❌ Deployment failed!"
-          echo "========================================="
-          echo "Please check the logs above for details"
