UPdate signin, signup, otp UI and apply signin API

--- a/.env
+++ b/.env
@@ -47,3 +47,4 @@ RESEND_API_KEY=re_Nzwpn9Jr_NE4ReUPnCxNpHjt47GwJDmtN
 REQUIRE_AUTH=true
 
 AUTH_SERVICE_PORT=8081
+CACHE_CLIENT_URL=http://localhost:8079
